fix overflow issues with modal

--- a/src/components/contact/Modal.module.scss
+++ b/src/components/contact/Modal.module.scss
@@ -375,8 +375,8 @@
 @media screen and (max-width: 600px) {
 	.container {
 		& .form_container {
-			max-width: 90vw;
-			width: 90vw;
+			max-width: 80vw;
+			width: 80vw;
 			padding: 2rem;
 			& form {
 				& .input_row {
