--- a/src/components/home/Header.module.scss
+++ b/src/components/home/Header.module.scss
@@ -117,7 +117,7 @@
 				min-height: 3rem;
 				background: $alert;
 				border: 1px solid $alert;
-				box-shadow: 0 1px 22px darken($alert, 1%);
+				box-shadow: 0 1px 22px darken($alert, 5%);
 				border-radius: 150px;
 				color: #fff;
 				text-transform: uppercase;
